--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,8 +94,8 @@ h1 {
   border: 1px solid white;
 }
 .primary-btn:hover {
-    border: 1px solid black;
-  }
+  border: 1px solid black;
+}
 /* Secondary button hover */
 .secondary-btn:hover {
   background: white;
@@ -153,7 +153,7 @@ h1 {
   display: inline-block;
 }
 .sub-head div {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .sub-head h2::after {
@@ -244,7 +244,7 @@ h1 {
   font-weight: 800;
   margin-bottom: 24px;
   padding-bottom: 20px;
-  border-bottom: 2px solid #DFDFDF;
+  border-bottom: 2px solid #dfdfdf;
 }
 
 .media-item {
@@ -311,4 +311,174 @@ h1 {
 }
 .logo-sankei img {
   max-height: 34px;
+}
+
+/* Samurai css */
+.samurai-section {
+  background: #fff;
+}
+
+/* Heading */
+.shift-heading {
+  font-size: 42px;
+  font-weight: 800;
+}
+
+.section-desc {
+  max-width: 600px;
+  font-size: 14px;
+  color: #555;
+}
+
+/* Video */
+.video-wrapper {
+  position: relative;
+  border-radius: 24px;
+  overflow: hidden;
+}
+
+.video-wrapper img {
+  width: 100%;
+  height: 420px;
+  object-fit: cover;
+}
+
+.play-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 72px;
+  height: 72px;
+  background: #fff;
+  border-radius: 50%;
+  font-size: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+/* Feature Cards */
+.feature-card {
+  background: #fff;
+  padding-top: 16px;
+  height: 100%;
+  border: 1px solid #cfcfcf;
+  border-radius: 20px;
+}
+
+.feature-number {
+  font-size: 32px;
+  font-weight: 700;
+  color: #f3a19a;
+  margin-bottom: 16px;
+}
+
+.feature-body {
+  padding-left: 45px;
+}
+
+.feature-content h5 {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.feature-content p {
+  font-size: 14px;
+  color: #555;
+  margin: 0;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .shift-heading {
+    font-size: 28px;
+  }
+}
+.video-container {
+  width: 100%;
+  overflow: hidden;
+  padding: 30px 0;
+}
+
+.video-container iframe {
+  width: 100%;
+  height: 452px;
+  border-radius: 20px;
+}
+
+/* Talent and Partnership css */
+.talent-section .grid-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* Grid row */
+.grid-row {
+  display: grid;
+  grid-template-columns: 420px 1fr;
+  align-items: center;
+  gap: 80px;
+  width: 100%;
+  max-width: 1100px;
+}
+
+/* Reverse layout */
+.grid-row.reverse {
+  grid-template-columns: 1fr 420px;
+}
+
+.grid-row.reverse .image-t {
+  order: 2;
+}
+
+.grid-row.reverse .content {
+  order: 1;
+}
+
+/* Image */
+.image-t {
+  display: flex;
+  justify-content: center;
+}
+
+.image-t img {
+  width: 100%;
+  max-width: 420px;
+  object-fit: cover;
+}
+
+/* Text */
+.content-t {
+  max-width: 560px;
+}
+.content-t h3 {
+  color: #9a0000;
+  font-family: "Mochiy Pop One";
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 50.4px */
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .grid-row,
+  .grid-row.reverse {
+    grid-template-columns: 1fr;
+    gap: 40px;
+    text-align: left;
+  }
+
+  .image,
+  .content {
+    order: unset;
+  }
+
+  .content {
+    max-width: 100%;
+  }
 }
